fix: selector is scrollable instead of overflow

--- a/src/public/style.scss
+++ b/src/public/style.scss
@@ -22,6 +22,8 @@
   }
 
   &> ul {
+    overflow-x: hidden;
+    overflow-y: auto;
     list-style-type: none;
     position: absolute;
     bottom: 100%;
